2009-02-25  John W. Eaton  <jwe@octave.org>

	* plot/pie.m: Use numel to check sizes of X and LABELS instead of
	using size_equal.  From Andy Buckle <andybuckle@gmail.com>.

	* help/lookfor.m: Split original path into cell array and compare
	elements with strcmp.  Suppress warnings and errors when getting
	help text from function files.

2009-02-24  John W. Eaton  <jwe@octave.org>

	* help/gen_doc_cache.m: Don't compress output file.  By default,
	write to DOC, not DOC.gz.  Don't save empty cache.

	* help/lookfor.m: Use doc_cache_file to get location of DOC file.

2009-02-24  Jason Riedy  <jason@acm.org>

	* pkg/pkg.m (generate_lookfor_cache): Generate a DOC file for each
	directory.

	* help/gen_doc_cache.m: Call __makeinfo__, not makeinfo.

2009-02-24  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fsolve.m: Update niter after each iteration, not just
	a succesful one.

2009-02-08  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* configure.in: AC_SUBST ac_config_files

	* Makefile.in:  Add make targets for configuration files
	and config.status.

2009-02-23  John W. Eaton  <jwe@octave.org>

	* plot/fplot.m: Fix nargin check.
	From Joel Parker <Joel.Parker@radiancetech.com>.

2009-02-20  Steffen Groot  <steffen.groot@technolution.eu>

	* plot/__patch__.m: Correct indexing of varargin.

2009-02-20  Jaroslav Hajek  <highegg@gmail.com>

	* linear-algebra/dmult.m: Remove.
	* linear-algebra/Makefile.in: Update.
	* deprecated/dmult.m: Move here; revert to the 3.0.x version.
	* deprecated/Makefile.in: Update.
	* statistics/models/logistic_regression_derivatives.m: Replace dmult
	by diagonal matrices.

2009-02-19  Ben Abbott <bpabbott@mac.com>

	* plot/gnuplot_drawnow.m: Only send figure position info to gnuplot
	when the plot stream is first opened. Revert usage of hidden axes 
	to store prior figure "position" property.

2009-02-19  John W. Eaton  <jwe@octave.org>

	* general/__isequal__.m, general/__splinen__.m, image/__img__.m,